--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
   <head>
     <title>JavaScript (on PythonAnywhere)</title>
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <meta name="author" content="JavaScript on PythonAnywhere">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="JavaScript">
+    <meta property="og:description" content="on PythonAnywhere">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="JavaScript">
+    <meta name="twitter:description" content="on PythonAnywhere">
+
     <link href="https://fonts.cdnfonts.com/css/neutraface-text" rel="stylesheet">
     <link rel="stylesheet" href="base.css">
   </head>
