--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/base.css">
 
     <meta name="author" content="JavaScript on PythonAnywhere">
     <meta property="og:type" content="website">
